--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "add": "^2.0.6",
+    "cogo-toast": "^4.2.3",
     "greeting-time": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
